Break out currencies in report summary, show subcategory subtotals and row grouping in ByCategory, add DB migration scripts.
Report totals were mixing BYN/EUR/USD amounts together after multi-currency
support was added; Summary and ByCategory sheets now split everything per
currency, ByCategory adds subcategory subtotal rows, and both the xlsx and
Google Sheets exports get collapsible category/subcategory row groups
(outline-based, no cell merging).

Also add scripts/migrate-local-to-prod.sh (merge users/categories/accounts
from local into prod by natural key) and scripts/clone-dev-to-prod.sh
(full wipe-and-replace of prod app tables from dev, with an automatic
pre-wipe backup).